IMC-717 fixed z-index
IMC-710 fixed z-index again

IMC-710 fixed z-index again


Former-commit-id: 2625beddd65332672e4ae813334d570c302ad67d

--- a/client/app/components/FloatingMenu/FloatingMenu.scss
+++ b/client/app/components/FloatingMenu/FloatingMenu.scss
@@ -11,7 +11,6 @@
     padding-top: 10px;
     width: $menu-width-expanded;
     box-shadow: 1px 0 1px rgba(black, 0.25);
-    overflow: hidden;
     transition: all 0.8s ease;
     &.collapsed {
       width: $menu-width-collapsed;
